:poop: Fix spacing in sections, code of questionable quality (https://github.com/Purple-Hydrangea-Project/PHP-gatsby/issues/31)

--- a/src/components/Partners/Partners.scss
+++ b/src/components/Partners/Partners.scss
@@ -2,10 +2,10 @@
     display: inline-flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin-left: 5em;
-    margin-right: 5em;
+    margin: auto;
+    justify-content: center;
 }
 
 .partners-grid img{
-    width: 15em;
+    width: 16em;
 }
